[project]
name = "flux2-turbo-runpod-worker"
version = "0.1.0"
description = "A5000-friendly RunPod worker for quantized FLUX.2 Turbo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.34.0",
    "bitsandbytes>=0.46.0",
    "diffusers @ git+https://github.com/huggingface/diffusers.git",
    "huggingface_hub>=0.34.0",
    "pillow>=10.0.0",
    "runpod>=1.7.0",
    "sentencepiece>=0.2.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
